ui-kit/vue/2.0/overview.mdx
---
title: "Overview"
description: "Overview of Overview in CometChat."
---

The CometChat Vue UI Kit is developed to keep developers in mind and aims to reduce development efforts significantly.

<Frame>
  <img src="/images/6c562707-1623200343-a73d4f39bf9c0b2a4c7242248fe92aa3.png" />
</Frame>

The UI Kit’s customizable UI components simplify the process of integrating text chat and voice/video calling features to your website or mobile application in a few minutes.

<CardGroup>
<Card title="I want to checkout Vue UI Kit">

Follow the steps mentioned in the `README.md` file.



Kindly, click on below button to download our Vue UI Kit.

<CardGroup>
<Card href="https://github.com/cometchat-pro/cometchat-pro-vue-ui-kit/archive/v2.zip">
Vue UI Kit
</Card>
<Card href="https://github.com/cometchat-pro/cometchat-pro-vue-ui-kit/tree/v2">
View on Github
</Card>
</CardGroup>
</Card>

<Card title="I want to explore the sample app">

Kindly, click on below button to download our Vue Sample App.

[Vue Sample App](https://github.com/cometchat-pro/javascript-vue-chat-app/archive/v2.zip)

[View on Github](https://github.com/cometchat-pro/javascript-vue-chat-app/tree/v2)

</Card>
</CardGroup>

## Prerequisites

Before you begin, ensure you have met the following requirements:

1. A text editor. (e.g. Visual Studio Code, Notepad++, Sublime Text, Atom, or VIM)
2. [Node](https://nodejs.org/en/)
3. [npm](https://www.npmjs.com/get-npm)
4. [Vue](https://vuejs.org/)

For installing Vue 2

<Tabs>
<Tab title="CLI">
```sh
npm install vue@2.6.14
```

</Tab>

</Tabs>

For installing Vue 3

<Tabs>
<Tab title="CLI">
```sh
npm install vue@3.2.11
```

</Tab>

</Tabs>

## Installing Vue UI Kit

### Setup

1. Register on CometChat 🔧

   * To install Vue UI Kit, you need to first register on the CometChat Dashboard. Click here to Sign Up.

2. Get your application keys 🔑 a. Create a new app. b. Head over to the QuickStart or API & Auth Keys section and note the App ID, Auth Key, and Region.

3. Add the CometChat dependency 📦

<Tabs>
<Tab title="CLI">
```sh
npm install @cometchat-pro/chat@2.4.1-beta1 --save
```

</Tab>

</Tabs>

### Configure CometChat inside your app

* Import CometChat SDK

<Tabs>
<Tab title="JavaScript">
```js
import { CometChat } from "@cometchat-pro/chat";
```

</Tab>

</Tabs>

* Initialize CometChat 🌟

The init() method initializes the settings required for CometChat. We suggest calling the init() method on app startup, preferably in the created() method of the Application class.

<Tabs>
<Tab title="JavaScript">
```js
const appID = "APP_ID";
const region = "REGION";
const appSetting = new CometChat.AppSettingsBuilder()
  .subscribePresenceForAllUsers()
  .setRegion(region)
  .build();

CometChat.init(appID, appSetting).then(
  () => {
    console.log("Initialization completed successfully");
    // You can now call login function.
  },
  error => {
    console.log("Initialization failed with error:", error);
    // Check the reason for error and take appropriate action.
  }
);
```

</Tab>

</Tabs>

<Warning>

Replace APP\_ID and REGION with your CometChat App ID and Region in the above code

</Warning>

* Create user

This method takes a `User` object and the `Auth Key` as input parameters and returns the created `User` object if the request is successful.

<Tabs>
<Tab title="JavaScript">
```js
let authKey = "AUTH_KEY";
var uid = "user1";
var name = "Kevin";

var user = new CometChat.User(uid);
user.setName(name);
CometChat.createUser(user, authKey).then(
    user => {
        console.log("user created", user);
    },error => {
        console.log("error", error);
    }
)
```

</Tab>

</Tabs>

* Login your user 👤

This method takes UID and Auth Key as input parameters and returns the User object containing all the information of the logged-in user.

<Tabs>
<Tab title="JavaScript">
```js
const authKey = "AUTH_KEY";
const uid = "cometchat-uid-1";

CometChat.login(uid, authKey).then(
  user => {
    console.log("Login Successful:", { user });    
  },
  error => {
    console.log("Login failed with exception:", { error });    
  }
);
```

</Tab>

</Tabs>

<Warning>

Replace AUTH\_KEY with your CometChat Auth Key in the above code.

</Warning>

<Note>

We have set up 5 users for testing having UIDs: cometchat-uid-1, cometchat-uid-2, cometchat-uid-3, cometchat-uid-4, and cometchat-uid-5.

We have used uid cometchat-uid-1 as an example here. You can create a User from CometChat Dashboard as well.

</Note>

### Add UI Kit to your project

* Clone this repository.

<Tabs>
<Tab title="CLI">
```sh
git clone https://github.com/cometchat-pro/cometchat-pro-vue-ui-kit.git -b v2
```

</Tab>

</Tabs>

* Copy the folder to your source folder.

<Frame>
  <img src="/images/5f829a6d-1631544136-165c4d3cbc2a52acdc3c4c49ee54e99c.png" />
</Frame>

* Copy all the dependencies from package.json of `cometchat-pro-vue-ui-kit` into your project's package.json and install them.

* We are using [emoji-mart-vue-fast](https://www.npmjs.com/package/emoji-mart-vue-fast) Please install respective library depending on your Vue version

* * For Vue2 : `npm install emoji-mart-vue-fast@7.0.7`
  * For Vue3 : `npm install emoji-mart-vue-fast@8.0.3`

<Frame>
  <img src="/images/2e100af6-1634215300-2830fa308d86eb87655512b554c58de8.png" />
</Frame>

### Launch CometChat

Using the `CometChatUI` component from the UI Kit, you can launch a fully functional chat application. In this component, all the UI Components are interlinked and work together to launch a fully functional chat on your website/application.

<Frame>
  <img src="/images/b3362330-1623200351-fcc7e751c1f740c4a693bfdb14354be8.gif" />
</Frame>

### Usage

<Tabs>
<Tab title="Vue">
```js
<template>
 <div id="app">
   <CometChatUI />
 </div>
</template>

<script>
 import { CometChatUI } from "./cometchat-pro-vue-ui-kit/CometChatWorkspace/src";
 export default {
   name: "App",
   components: {
     CometChatUI,
   }
 };
</script>
```

</Tab>

</Tabs>

## Checkout our sample app

Visit our [Vue sample app](https://github.com/cometchat-pro/javascript-vue-chat-app/tree/v2) repo to run the Vue sample app.
